[package]
name = "crate-write-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance CrateDB record generator and inserter"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "crate-write"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.0"

# Base64 encoding for auth
base64 = "0.21"


# TOML parsing for config files
toml = "0.8"

# Real-time dashboard (optional)
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", optional = true }

[features]
default = ["dashboard"]
dashboard = ["crossterm", "ratatui"]
prometheus = ["metrics-exporter-prometheus"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
